# rota

./: .gitignore  CMakeLists.txt  README.md  TODO.md  grammar.txt  tests.c  tests.cc
.old/assembler/: assembler.l
.old/compiler/: compiler.hh  compiler.y
.old/vm/: exceptions.hh  opcode.hh  optable.cc  rotavm.cc  vm.hh
.old/vm/compiler/: compiler.cc  compiler.hh  compiler.l  compiler.y
assembler/: assembler.cc  assembler.hh  assembler.l  assembler.y
assembly/: assembly.cc  assembly.hh  assemblybuilder.cc  assemblybuilder.hh  bc_generator.cc  bc_generator.hh  bytecode.cc  bytecode.hh
bytecode/: bytecode.cc  bytecode.hh  bytecode_format.txt  bytecodesimple.hh
common/: opcodes.hh  types.cc  types.hh  value.cc  value.hh
compiler/: compiler.cc  compiler.hh  compiler.l  compiler.y  lexer.l  parser.y
interpreter/: interpreter.cc  interpreter.hh  interpreter.l  interpreter.y
vm/: exceptions.hh  executable.cc  executable.hh  function.hh  opcode.hh  optable.cc  optable.hh  rotavm.cc  rotavm.hh  tests.cc  type.hh  value.cc  value.hh  values.txt  vm.cc  vm.hh  vmexceptions.hh
vm/compiler/: compiler.cc  compiler.hh  compiler.l  compiler.y
